Made sure every page is responsive

--- a/css/forgot-passwords.css
+++ b/css/forgot-passwords.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,200;10..48,300;10..48,400;10..48,500;10..48,600;10..48,700;10..48,800&display=swap');
 
+:root{
+  --white-color: #ffffff;
+  --black-color: #000000;
+}
 *{
   padding: 0;
   margin: 0;
@@ -27,7 +31,7 @@ body{
   margin-bottom: 20px;
 }
 form{
-  box-shadow: 1px 2px 5px 1px black;
+  box-shadow: 1px 2px 5px 1px var(--black-color);
 }
 label{
   font-size: 2rem;
@@ -37,7 +41,7 @@ input[type="email"]{
   border: 1px solid #7e22ce;
 }
 input[type="submit"]{
-  color: white;
+  color: var(--white-color);
 }
 #recovery-form{
   padding: 40px 30px;
