--- a/css/post.css
+++ b/css/post.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,200;10..48,300;10..48,400;10..48,500;10..48,600;10..48,700;10..48,800&display=swap');
 
+:root{
+  --black-color: #000000;
+  --blue-color: #7e22ce;
+  --gray-color: #6e6e6e;
+  --white-color: #ffffff;
+}
 body{
   font-family: 'Bricolage Grotesque', sans-serif;
 }
@@ -8,8 +14,6 @@ html{
 }
 .posts{
   margin: 0 auto;
-  /* margin-top: 20px;  */
-  /* margin-bottom: 30px; */
   max-width: 700px; 
   width: 95%;
 }
@@ -19,7 +23,7 @@ html{
   padding: 0;
 }
 .container{
-  box-shadow: 1px 2px 5px 1px black;
+  box-shadow: 1px 2px 5px 1px var(--black-color);
   border-radius: 10px; 
   padding: 20px; 
   margin-bottom: 50px;
@@ -30,9 +34,9 @@ html{
   justify-content: space-between;
 }
 .post-info .tag h1{
-  color: rgb(110, 110, 110);
+  color: var(--gray-color);
   font-size: 1.3rem;
-  box-shadow: 1px 2px 5px 1px black;
+  box-shadow: 1px 2px 5px 1px var(--black-color);
   border-radius: 30px;
   padding: 6px;
 }
@@ -44,16 +48,16 @@ html{
   margin-right: 10px;
   width: 60px;
   height: 60px;
-  color: white;
-  box-shadow: 1px 2px 5px 1px black;
-  background-color: #7e22ce;
+  color: var(--white-color);
+  box-shadow: 1px 2px 5px 1px var(--black-color);
+  background-color: var(--blue-color);
 }
 .user-img h1{
   font-size: 2.7rem;
 }
 .user .fa-solid{
   font-size: 2.5rem;
-  border: 1px solid black;
+  border: 1px solid var(--black-color);
   border-radius: 50%;
   padding: 16px 18px;
 }
@@ -63,13 +67,13 @@ html{
 }
 .name-and-date span{
   font-size: 1.4rem; 
-  color: rgb(110, 110, 110); 
+  color: var(--gray-color); 
   font-style: italic;
 }
 .post-content .title{
   margin: 20px 0 10px 0; 
   font-size: 1.7rem; 
-  color: rgb(110, 110, 110);
+  color: var(--gray-color);
 }
 .post-content .message{
   margin-bottom: 20px; 
@@ -79,4 +83,13 @@ html{
 .my-posts{
   margin: 0 auto; max-width: 700px; width: 95%;
   margin-bottom: 30px;
+}
+@media (max-width: 375px){
+  .post-info{
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .post-info .tag h1{
+    margin-top: 20px;
+  }
 }
