--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
     --blue-color: #7e22ce;
     --white-color: #ffffff;
     --black-color: #000000;
+    --pink-color: #f9779f;
+    --background-color: #000000ad;
 }
 *{
   margin: 0;
@@ -62,6 +64,7 @@ nav li a{
     font-size: 2rem;
     margin-left: 30px;
     margin-right: 30px;
+    transition: border 0.5s ease;
 }
 nav li a:hover{
     border-bottom: 1px solid var(--blue-color);
@@ -80,7 +83,7 @@ nav li .login:hover{
     border-bottom: none;
 }
 .main{
-    background: linear-gradient(45deg,rgba(0, 0, 0, 0.678), #7e22ceab, #f9779f);
+    background: linear-gradient(45deg, var(--background-color), var(--blue-color), var(--pink-color));
     height: 90vh;
     width: 100%;
     display: flex;
@@ -92,14 +95,14 @@ nav li .login:hover{
     font-size: 8.2rem;
     text-align: center;
     max-width: 1100px;
-    color: white;
+    color: var(--white-color);
 }
 .main p{
     font-size: 2.7rem;
     text-align: center;
     max-width: 950px;
     margin: 20px 20px;
-    color: white;
+    color: var(--white-color);
 }
 .main a{
     text-decoration: none;
@@ -109,11 +112,10 @@ nav li .login:hover{
     display: block;
     margin-top: 20px;
     padding: 13px 30px;
-    position: relative;
     border-radius: 20px;
 }
 .about{
-    background: linear-gradient(-60deg,rgba(0, 0, 0, 0.678), #7e22ceab, #f9779f);
+    background: linear-gradient(-60deg, var(--background-color), var(--blue-color), var(--pink-color));
     display: flex;
     align-items: center;
     justify-content: center;
@@ -133,11 +135,11 @@ nav li .login:hover{
 }
 .about p{
     font-size: 2.3rem;
-    text-align: center;
+    text-align: justify;
     max-width: 950px;
     margin: 0px 20px;
     line-height: 2;
-    color: white;
+    color: var(--white-color);
 }
 form span{
     font-size: 1.7rem; 
@@ -179,14 +181,12 @@ footer p{
 @media (max-width: 750px){
     header{
         justify-content: space-between;
-        padding: 10px 10px;
+        padding: 15px 10px;
     }
     header h1{
         font-size: 3.3rem;
     }
-    .menu-bar{
-        display: block;
-    }
+    
     .menu-bar.active .bar:nth-child(2){
         opacity: 0;
     }
@@ -247,6 +247,9 @@ footer p{
     .main p{
         font-size: 2rem;
     }
+    .menu-bar{
+        display: block;
+    }
 }
 @media (max-width: 676px){
     .main h1{
@@ -267,7 +270,7 @@ footer p{
         font-size: 1.8rem;
     }
     .about p{
-        font-size: 2rem;
+        font-size: 1.8rem;
         text-align: justify;
     }
 }
@@ -305,7 +308,7 @@ footer p{
         padding: 12px 20px;
     }
     .about p{
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         text-align: justify;
         padding-bottom: 20px;
     }
